// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader component should match snapshot as default 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

<svg
    class="c0"
    height="2rem"
    role="img"
    style="animation-duration: 750ms;"
    viewBox="0 0 32 32"
    width="2rem"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke="rgba(224, 224, 224, 1)"
      stroke-dasharray="50.26548245743669"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader component should match snapshot with all measures 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

<svg
    class="c0"
    height="1.5rem"
    role="img"
    style="animation-duration: 750ms;"
    viewBox="0 0 32 32"
    width="1.5rem"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke="rgba(224, 224, 224, 1)"
      stroke-dasharray="50.26548245743669"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader component should match snapshot with all measures 2`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

<svg
    class="c0"
    height="2rem"
    role="img"
    style="animation-duration: 750ms;"
    viewBox="0 0 32 32"
    width="2rem"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke="rgba(224, 224, 224, 1)"
      stroke-dasharray="50.26548245743669"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader component should match snapshot with all measures 3`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

<svg
    class="c0"
    height="3rem"
    role="img"
    style="animation-duration: 750ms;"
    viewBox="0 0 32 32"
    width="3rem"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke="rgba(224, 224, 224, 1)"
      stroke-dasharray="50.26548245743669"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader component should match snapshot with all measures 4`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

<svg
    class="c0"
    height="4rem"
    role="img"
    style="animation-duration: 750ms;"
    viewBox="0 0 32 32"
    width="4rem"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke="rgba(224, 224, 224, 1)"
      stroke-dasharray="50.26548245743669"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader component should match snapshot with all props 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

<svg
    class="c0"
    height="2rem"
    role="img"
    style="animation-duration: 600ms;"
    viewBox="0 0 32 32"
    width="2rem"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke="rgba(224, 224, 224, 1)"
      stroke-dasharray="43.982297150257104"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader component should match snapshot with all speeds 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

<svg
    class="c0"
    height="2rem"
    role="img"
    style="animation-duration: 900ms;"
    viewBox="0 0 32 32"
    width="2rem"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke="rgba(224, 224, 224, 1)"
      stroke-dasharray="50.26548245743669"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader component should match snapshot with all speeds 2`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

<svg
    class="c0"
    height="2rem"
    role="img"
    style="animation-duration: 750ms;"
    viewBox="0 0 32 32"
    width="2rem"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke="rgba(224, 224, 224, 1)"
      stroke-dasharray="50.26548245743669"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader component should match snapshot with all speeds 3`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

<svg
    class="c0"
    height="2rem"
    role="img"
    style="animation-duration: 600ms;"
    viewBox="0 0 32 32"
    width="2rem"
  >
    <circle
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke="rgba(224, 224, 224, 1)"
      stroke-dasharray="50.26548245743669"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;
